[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "block-storage-simulator"
version = "0.1.0"
description = "Student-facing block storage simulator with a simple GUI and ADS-oriented control model."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Matti Valikyla" }
]
dependencies = [
  "py-ads-client>=0.0.7,<0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[project.scripts]
block-storage-sim = "block_storage_simulator.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/block_storage_simulator"]
